<resources>
    <string name="live_started">Live started</string>
    <string name="host_connection">Host connection</string>
    <string name="no_hosts_live">No hosts are broadcasting LIVE</string>
    <string name="volume">Volume</string>
    <string name="failed_get_live_information">Failed to get LIVE-related information. Please try again.</string>
    <string name="failed_create_live">Failed to create a LIVE</string>
    <string name="video_host_connecting">Connecting</string>
    <string name="host_busy">The Invited is busy</string>
    <string name="video_host_close_room">Close room</string>
    <string name="get_data_remote_host_error">Get data about remote host failed</string>
    <string name="invitation_sent_xxx_waiting">An invitation has been sent to %s. Waiting for response</string>
    <string name="in_pk">In Battle</string>
    <string name="video_host_invite">Invite</string>
    <string name="video_room_does_not_exist">The room does not exist. Go back to the room list page</string>
    <string name="turn_off_chat_room">Turn off chat room mode?</string>
    <string name="video_sent_invitation">You have sent an invitation</string>
    <string name="video_confirm_disconnecting">Confirm disconnecting?</string>
    <string name="video_disconnected_xxx">You have disconnected with %s</string>
    <string name="video_host_in_room_title">A host is in your room. Failed to add a guest</string>
    <string name="room_list_page_error">Error. Go back to the room list page.</string>
    <string name="xxx_entered_room">%1$s entered room</string>
    <string name="xxx_left_room">%1$s left room</string>
    <string name="video_live_ended">Live has ended</string>
    <string name="chat_live_cant_xxx_minutes">The duration of a LIVE can\'t exceed %s minutes.</string>
    <string name="video_host_disconnected">Host has disconnected with you</string>
    <string name="video_xxx_declined_invitation">%s declined your invitation</string>
    <string name="video_xxx_invited_co_host">%s invited you to be co-host.</string>
    <string name="video_xxx_has_left">%s has left</string>
    <string name="failed_unmute_remote_co_host">Failed to unmute remote co-host</string>
    <string name="failed_mute_remote_co_host">Failed to mute remote co-host</string>
    <string name="music_volume">Music</string>
    <string name="vocal_volume">Voice</string>
    <string name="xxx_invites_you_connect">%s invites you to co-host.</string>
    <string name="video_chat_in_application">Requesting</string>
    <string name="video_chat_agree">Agree</string>
    <string name="video_chat_invited">Invited</string>
    <string name="video_chat_invite_connect">Invite</string>
    <string name="video_chat_no_host_online">No hosts are broadcasting LIVE</string>
    <string name="video_chat_no_audience_online">No audience</string>
    <string name="video_chat_no_news">No guest requests yet</string>
    <string name="video_chat_online_audience">Audience</string>
    <string name="video_chat_application_message">Guest requests</string>
    <string name="invitation_audience_waiting">Invitation has been sent. Waiting for responding</string>
    <string name="video_chat_on_mic">Connected</string>
    <string name="video_chat_xxx_on_mic">%s has been a co-host</string>
    <string name="video_chat_invite_on_mic">Invite</string>
    <string name="application_sent_host">Guest request sent</string>
    <string name="sure_lock_seat">Sure to block this guest seat? If so, an audience can\'t be a guest in the seat, and the guest in the seat will be changed into an audience.</string>
    <string name="video_chat_already_on_mic">You have been a guest</string>
    <string name="video_chat_guest_off_mic">Disconnect</string>
    <string name="video_chat_unmute">Unmute</string>
    <string name="video_chat_mute_mic">Mute</string>
    <string name="video_chat_lock_seat">Block</string>
    <string name="video_chat_unlock_seat">Unblock</string>
    <string name="video_chat_off_mic">Disconnect</string>
    <string name="video_chat_seat">Seat</string>
    <string name="video_chat_say_something">Add comment</string>
    <string name="video_chat_start_live">Go LIVE</string>
    <string name="video_chat_xxx_live">%s\'s room</string>
    <string name="video_chat_create_room">Create a Room</string>
    <string name="video_chat_you_on_mic">You have been a guest</string>
    <string name="video_chat_removed_on_mic">You have been removed from guest</string>
    <string name="video_chat_you_off_mic">You have been an audience</string>
    <string name="video_chat_xxx_you_off_mic">%s has been an audience</string>
    <string name="video_chat_xxx_you_on_mic">%s has been a guest</string>
    <string name="host_invited_you_on_mic">Host is inviting you to go LIVE together</string>
    <string name="host_unmuted_you">You have been unmuted</string>
    <string name="you_muted_by_host_title">You have been muted</string>
    <string name="video_chat_end_live">Confirm</string>
    <string name="video_chat_end_live_alert">Are you sure end this LIVE？</string>
    <string name="video_chat_join_room">entered room</string>
    <string name="video_chat_left_room">left the room</string>
    <string name="no_created_room_title">No one has created a chatting room. Create one.</string>
    <string name="go_live">Go LIVE</string>
    <string name="sheet_apply_message">Request</string>
    <string name="operate_failed">The operation failed. Please try again later.</string>
</resources>